test_scripts/errors/missing_semicolon_let.stderr
Parse Error:
 1 | let x = 5 let y = 6
               ^^^
Error: Expected `;` or newline to end statement, found Let
Failed to parse script
